tests-build/tests/fail/macros_type_mismatch.stderr
error[E0308]: mismatched types
 --> tests/fail/macros_type_mismatch.rs:5:5
  |
5 |     Ok(())
  |     ^^^^^^- help: consider using a semicolon here: `;`
  |     |
  |     expected `()`, found `Result<(), _>`
  |
  = note: expected unit type `()`
                  found enum `Result<(), _>`

error[E0308]: mismatched types
 --> tests/fail/macros_type_mismatch.rs:8:1
  |
8 | #[tokio::main]
  | ^^^^^^^^^^^^^^ expected `()`, found `Result<(), _>`
9 | async fn missing_return_type() {
  |                                - help: a return type might be missing here: `-> _`
  |
  = note: expected unit type `()`
                  found enum `Result<(), _>`
  = note: this error originates in the attribute macro `tokio::main` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/fail/macros_type_mismatch.rs:14:31
   |
14 | async fn extra_semicolon() -> Result<(), ()> {
   |          ---------------      ^^^^^^^^^^^^^^ expected `Result<(), ()>`, found `()`
   |          |
   |          implicitly returns `()` as its body has no tail or `return` expression
...
23 |     Ok(());
   |           - help: remove this semicolon to return this value
   |
   = note:   expected enum `Result<(), ()>`
           found unit type `()`

error[E0308]: mismatched types
  --> tests/fail/macros_type_mismatch.rs:29:1
   |
29 | #[tokio::main]
   | ^^^^^^^^^^^^^^ expected `()`, found integer
30 | async fn issue_4635() {
   |                       - help: try adding a return type: `-> i32`
   |
   = note: this error originates in the attribute macro `tokio::main` (in Nightly builds, run with -Z macro-backtrace for more info)
